--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Francesco Ippolito
 #logo: /assets/img/logo.png
 description: text below image
 show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
